syntax = "proto3";

package auth;

option go_package = "github.com/linggaaskaedo/go-kill/user-service/src/api/proto;proto";

service AuthService {
  rpc CreateAuthUser(CreateAuthUserRequest) returns (CreateAuthUserResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message CreateAuthUserRequest {
  string email = 1;
  string password = 2;
}

message CreateAuthUserResponse {
  string auth_id = 1;
  bool success = 2;
  string error = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
}

message LoginResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
  string error = 5;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  int64 expires_in = 3;
  string error = 4;
}

message LogoutRequest {
  string token = 1;
  string user_id = 2;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}
